Bug 89957 - vm protection faults in piglit lest: texsubimage cube_map_array pbo
Summary: vm protection faults in piglit lest: texsubimage cube_map_array pbo
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-08 17:23 UTC by Tom Stellard
Modified: 2015-04-13 23:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Tom Stellard 2015-04-08 17:23:22 UTC
To reproduce:  /home/tstellar/piglit/bin/texsubimage cube_map_array pbo -auto -fbo

I've spent some time debugging this and it appears the result from the v_cubeid_f32
instruction is causing the shader to access memory outside the bounds of the texture.

If I replace v_cubeid_f32 $dst, $src0, $src1, $src2 instructions with v_mov_f32 $dst, 0.0 or v_mov_f32 $dst, 1.0
I no longer see vm protection faults.

However, if I replace the v_cubeid_f32 instructions with v_mov_f32 $dst, 2.0 then the vm protection faults return.  So, it seems the bad case is whenever the face id is computed as >= 2.0f.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.